build_log_2.txt

> Configure project :
Fabric Loom: 1.14.7

> Task :clean

> Task :compileJava FAILED
E:\Minecraft Project\Vanilla Outsider Collections\Better Dogs all version\Better Dogs 26.1\src\main\java\net\vanillaoutsider\betterdogs\WolfPersistentData.java:113: error: ',', ')', or '[' expected
    public static void setScale(int personalityId, int lastDamageTime, boolean submissive, org.jspecify.annotations.Nullable String bloodFeudTarget, long lastMischiefDay, long dna, Wolf wolf, float scale) {
                                                                                                                                   ^
E:\Minecraft Project\Vanilla Outsider Collections\Better Dogs all version\Better Dogs 26.1\src\main\java\net\vanillaoutsider\betterdogs\WolfPersistentData.java:113: error: <identifier> expected
    public static void setScale(int personalityId, int lastDamageTime, boolean submissive, org.jspecify.annotations.Nullable String bloodFeudTarget, long lastMischiefDay, long dna, Wolf wolf, float scale) {
                                                                                                                                                                          ^
E:\Minecraft Project\Vanilla Outsider Collections\Better Dogs all version\Better Dogs 26.1\src\main\java\net\vanillaoutsider\betterdogs\WolfPersistentData.java:113: error: ';' expected
    public static void setScale(int personalityId, int lastDamageTime, boolean submissive, org.jspecify.annotations.Nullable String bloodFeudTarget, long lastMischiefDay, long dna, Wolf wolf, float scale) {
                                                                                                                                                                                         ^
E:\Minecraft Project\Vanilla Outsider Collections\Better Dogs all version\Better Dogs 26.1\src\main\java\net\vanillaoutsider\betterdogs\WolfPersistentData.java:113: error: <identifier> expected
    public static void setScale(int personalityId, int lastDamageTime, boolean submissive, org.jspecify.annotations.Nullable String bloodFeudTarget, long lastMischiefDay, long dna, Wolf wolf, float scale) {
                                                                                                                                                                                              ^
E:\Minecraft Project\Vanilla Outsider Collections\Better Dogs all version\Better Dogs 26.1\src\main\java\net\vanillaoutsider\betterdogs\WolfPersistentData.java:113: error: <identifier> expected
    public static void setScale(int personalityId, int lastDamageTime, boolean submissive, org.jspecify.annotations.Nullable String bloodFeudTarget, long lastMischiefDay, long dna, Wolf wolf, float scale) {
                                                                                                                                                                                               ^
E:\Minecraft Project\Vanilla Outsider Collections\Better Dogs all version\Better Dogs 26.1\src\main\java\net\vanillaoutsider\betterdogs\WolfPersistentData.java:113: error: ';' expected
    public static void setScale(int personalityId, int lastDamageTime, boolean submissive, org.jspecify.annotations.Nullable String bloodFeudTarget, long lastMischiefDay, long dna, Wolf wolf, float scale) {
                                                                                                                                                                                                           ^
E:\Minecraft Project\Vanilla Outsider Collections\Better Dogs all version\Better Dogs 26.1\src\main\java\net\vanillaoutsider\betterdogs\WolfPersistentData.java:113: error: instance initializers not allowed in records
    public static void setScale(int personalityId, int lastDamageTime, boolean submissive, org.jspecify.annotations.Nullable String bloodFeudTarget, long lastMischiefDay, long dna, Wolf wolf, float scale) {
                                                                                                                                                                                                             ^
7 errors

[Incubating] Problems report is available at: file:///E:/Minecraft%20Project/Vanilla%20Outsider%20Collections/Better%20Dogs%20all%20version/Better%20Dogs%2026.1/build/reports/problems/problems-report.html

FAILURE: Build failed with an exception.

* What went wrong:
Execution failed for task ':compileJava'.
> Compilation failed; see the compiler output below.
  E:\Minecraft Project\Vanilla Outsider Collections\Better Dogs all version\Better Dogs 26.1\src\main\java\net\vanillaoutsider\betterdogs\WolfPersistentData.java:113: error: ',', ')', or '[' expected
      public static void setScale(int personalityId, int lastDamageTime, boolean submissive, org.jspecify.annotations.Nullable String bloodFeudTarget, long lastMischiefDay, long dna, Wolf wolf, float scale) {
                                                                                                                                     ^
  E:\Minecraft Project\Vanilla Outsider Collections\Better Dogs all version\Better Dogs 26.1\src\main\java\net\vanillaoutsider\betterdogs\WolfPersistentData.java:113: error: <identifier> expected
      public static void setScale(int personalityId, int lastDamageTime, boolean submissive, org.jspecify.annotations.Nullable String bloodFeudTarget, long lastMischiefDay, long dna, Wolf wolf, float scale) {
                                                                                                                                                                            ^
  E:\Minecraft Project\Vanilla Outsider Collections\Better Dogs all version\Better Dogs 26.1\src\main\java\net\vanillaoutsider\betterdogs\WolfPersistentData.java:113: error: ';' expected
      public static void setScale(int personalityId, int lastDamageTime, boolean submissive, org.jspecify.annotations.Nullable String bloodFeudTarget, long lastMischiefDay, long dna, Wolf wolf, float scale) {
                                                                                                                                                                                           ^
  E:\Minecraft Project\Vanilla Outsider Collections\Better Dogs all version\Better Dogs 26.1\src\main\java\net\vanillaoutsider\betterdogs\WolfPersistentData.java:113: error: <identifier> expected
      public static void setScale(int personalityId, int lastDamageTime, boolean submissive, org.jspecify.annotations.Nullable String bloodFeudTarget, long lastMischiefDay, long dna, Wolf wolf, float scale) {
                                                                                                                                                                                                ^
  E:\Minecraft Project\Vanilla Outsider Collections\Better Dogs all version\Better Dogs 26.1\src\main\java\net\vanillaoutsider\betterdogs\WolfPersistentData.java:113: error: <identifier> expected
      public static void setScale(int personalityId, int lastDamageTime, boolean submissive, org.jspecify.annotations.Nullable String bloodFeudTarget, long lastMischiefDay, long dna, Wolf wolf, float scale) {
                                                                                                                                                                                                 ^
  E:\Minecraft Project\Vanilla Outsider Collections\Better Dogs all version\Better Dogs 26.1\src\main\java\net\vanillaoutsider\betterdogs\WolfPersistentData.java:113: error: ';' expected
      public static void setScale(int personalityId, int lastDamageTime, boolean submissive, org.jspecify.annotations.Nullable String bloodFeudTarget, long lastMischiefDay, long dna, Wolf wolf, float scale) {
                                                                                                                                                                                                             ^
  E:\Minecraft Project\Vanilla Outsider Collections\Better Dogs all version\Better Dogs 26.1\src\main\java\net\vanillaoutsider\betterdogs\WolfPersistentData.java:113: error: instance initializers not allowed in records
      public static void setScale(int personalityId, int lastDamageTime, boolean submissive, org.jspecify.annotations.Nullable String bloodFeudTarget, long lastMischiefDay, long dna, Wolf wolf, float scale) {
                                                                                                                                                                                                               ^
  7 errors

* Try:
> Check your code and dependencies to fix the compilation error(s)
> Run with --scan to get full insights from a Build Scan (powered by Develocity).

BUILD FAILED in 1s
2 actionable tasks: 2 executed
